# Nullus

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLA.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CmakeLists.txt  Directory.Build.props  LICENSE  NuGet.Config  README.en.md  README.md  ReflectionBindingWorkflow.md  ReflectionPhase1_DevLog.md  SetupDependencies.bat  SetupDependencies.sh  Testing.md  build_linux.sh  build_macos.sh  build_windows.bat  run_editor_with_backend.ps1  run_editor_with_project.ps1  run_game_with_backend.ps1  test_vulkan_debug.ps1  test_vulkan_game.ps1  test_vulkan_renderdoc.ps1  verify_all_backends.ps1  verify_backends_simple.ps1
Project/: CMakeLists.txt  CmakeLists.txt  GameTechRenderer.cpp  GameTechRenderer.h  Main.cpp  NullusProjectPch.h  StateGameObject.cpp  StateGameObject.h  TutorialGame.cpp  TutorialGame.h
Project/Editor/: CMakeLists.txt  Main.cpp
Project/Editor/Assets/: ArtifactDatabaseManifestUtils.h  AssetBrowserPresentation.cpp  AssetBrowserPresentation.h  AssetDatabaseFacade.cpp  AssetDatabaseFacade.h  AssetDatabaseRetirementScheduler.cpp  AssetDatabaseRetirementScheduler.h  AssetDragDropWorkflow.cpp  AssetDragDropWorkflow.h  AssetImporterFacade.cpp  AssetImporterFacade.h  AssetImporterSettings.cpp  AssetImporterSettings.h  AssetThumbnail.cpp  AssetThumbnail.h  AssetThumbnailCache.cpp  AssetThumbnailCache.h  AssetThumbnailPool.cpp  AssetThumbnailPool.h  (+42 more)
Project/Game/: CMakeLists.txt  Game.cpp  Game.h  GameTechRenderer.cpp  GameTechRenderer.h  LaunchArgs.cpp  LaunchArgs.h  Main.cpp  RuntimeAssetManifestStartup.cpp  RuntimeAssetManifestStartup.h  StateGameObject.cpp  TutorialGame.cpp  TutorialGame.h
Project/Launcher/: CMakeLists.txt  Main.cpp
Runtime/: CMakeLists.txt  CmakeLists.txt  NullusRuntimePch.h
Runtime/Base/: Assembly.cpp  Assembly.h  BaseDef.h  CMakeLists.txt  CmakeLists.txt  CommonDef.h  Guid.cpp  Guid.h  GuidReflection.h  Image.cpp  Image.h  JsonFwd.h  NullusTraits.h  Singleton.h
Runtime/Core/: AssemblyCore.cpp  AssemblyCore.h  Assets.cpp  Assets.h  CMakeLists.txt  CmakeLists.txt  CoreDef.h  GameTimer.cpp  GameTimer.h  Image.cpp  Image.h  Keyboard.cpp  Keyboard.h  MeshAnimation.cpp  MeshAnimation.h  MeshGeometry.cpp  MeshGeometry.h  MeshLoader.cpp  MeshLoader.h  MeshMaterial.cpp  MeshMaterial.h  Mouse.cpp  Mouse.h  RendererBase.cpp  RendererBase.h  ServiceLocator.cpp  ServiceLocator.h  ShaderBase.cpp  ShaderBase.h  SimpleFont.cpp  SimpleFont.h  TextureBase.cpp  TextureBase.h  TextureLoader.cpp  TextureLoader.h  TextureWriter.cpp  TextureWriter.h  Window.cpp  Window.h
Runtime/Engine/: AssemblyEngine.cpp  AssemblyEngine.h  CMakeLists.txt  Camera.cpp  Camera.h  CmakeLists.txt  Component.cpp  Component.h  EngineDef.h  ExternalReflection.h  GameObject.cpp  GameObject.h  GameObject.inl  GameWorld.cpp  GameWorld.h  LayerMask.h  PrimitiveFactory.cpp  PrimitiveFactory.h  PrimitiveType.h  QuadTree.cpp  QuadTree.h  RenderObject.cpp  RenderObject.h  Transform.cpp  Transform.h  TransformComponent.cpp  TransformComponent.h
Runtime/Math/: AssemblyMath.cpp  AssemblyMath.h  CmakeLists.txt  Color.cpp  Color.h  CommonDef.h  ExternalReflection.h  MathDef.h  Maths.cpp  Maths.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Rect.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Runtime/Platform/: AssemblyPlatform.cpp  AssemblyPlatform.h  CMakeLists.txt  CmakeLists.txt  GameTimer.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  PlatformDef.h  Window.cpp  Window.h
Runtime/Render/: AssemblyRender.cpp  CmakeLists.txt  RenderObject.cpp  RenderObject.h
Runtime/Rendering/: AssemblyRender.cpp  AssemblyRender.h  CMakeLists.txt  ExternalReflection.h  Image.cpp  Image.h  RenderDef.h
Runtime/UI/: CMakeLists.txt  GUIDrawer.cpp  GUIDrawer.h  InfiniteDragCursorLease.h  UIDef.h  UIManager.cpp  UIManager.h
Tests/: CMakeLists.txt  NullusTestMain.cpp  NullusTestsPch.h
Tests/CMake/: DeployRuntimeTests.cmake
Tests/Performance/: AssetImportPerformanceTests.cpp  AssetPrefabPerformanceTests.cpp  AssetThumbnailPerformanceTests.cpp  AssetThumbnailStressPerformanceTests.cpp  CMakeLists.txt  EditorAssetDatabaseIntegrationPerformanceTests.cpp  EditorAssetDragDropIntegrationPerformanceTests.cpp  RenderScenePerformanceTests.cpp  ScenePrefabOpenPerformanceTests.cpp
Tests/RenderDoc/: test_renderdoc_runner.py
Tests/Rendering/: AssetMaterialViewportTests.cpp
Tests/SetupDependencies/: test_setup_dependencies.py
Tests/Unit/: AssetBrowserPresentationTests.cpp  AssetDatabaseFacadeTests.cpp  AssetDependencyPipelineTests.cpp  AssetFileWatcherTests.cpp  AssetFoundationTests.cpp  AssetImportPipelineTests.cpp  AssetImportProgressTests.cpp  AssetImporterFacadeTests.cpp  AssetManifestTests.cpp  AssetMaterialConversionTests.cpp  AssetPrefabBehaviorTests.cpp  AssetPrefabPerformanceTests.cpp  AssetPrefabPipelineTests.cpp  AssetThumbnailBehaviorTests.cpp  AssetThumbnailCacheTests.cpp  AssetThumbnailPerformanceTests.cpp  AssetThumbnailPoolTests.cpp  BindingPointMapTests.cpp  CMakeLists.txt  CameraControllerInputTests.cpp  CanvasDockspaceBackgroundTests.cpp  CompositeRendererExplicitDrawOrderTests.cpp  DX12DebugNameUtilsTests.cpp  DX12FormatUtilsTests.cpp  DX12GraphicsPipelineUtilsTests.cpp  DX12PipelineCacheBlobUtilsTests.cpp  DX12PipelineLayoutUtilsTests.cpp  DX12ReadbackUtilsTests.cpp  DX12RenderPassUtilsTests.cpp  DX12SamplerDescriptorReuseTests.cpp  DX12SamplerUtilsTests.cpp  DX12TextureUploadUtilsTests.cpp  DX12TextureViewUtilsTests.cpp  DX12UIFrameFenceTrackerTests.cpp  DebugDrawGeometryTests.cpp  DebugDrawPassTests.cpp  DebugDrawTypesTests.cpp  DebugSceneLifecycleTests.cpp  DeferredSceneRendererMaterialCacheTests.cpp  DescribableTests.cpp  (+131 more)
Tools/MetaParser/: CMakeLists.txt  MetaParser.sln  NuGet.Config  precompile.json.in
Tools/Parser/: CMakeLists.txt  Main.cpp  MetaDataManager.cpp  MetaUtils.cpp  MetaUtils.h  Precompiled.h  ReflectionParser.cpp  ReflectionParserUtils.cpp  ReflectionParserUtils.h  ReservedTypes.h
(+2133 files in other folders)
